fixing overflow and screen breakpoints

--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,11 @@ body,
 html {
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
+  
+}
+html{
+  font-size: 16px;
 }
 #main {
   width: 100%;
@@ -27,7 +32,6 @@ html {
     }
   }
   header {
-    // background-color: blue;
     padding: 1rem 0;
 
     .hero__text {
@@ -40,13 +44,12 @@ html {
         }
       }
       p {
-        font-size: 1.2rem;
+        font-size: 1rem;
         font-weight: 500;
         padding-bottom: 1rem;
       }
     }
     .hero__image {
-      // background-color: red;
       width: 100%;
       max-height: 400px;
       display: grid;
@@ -101,13 +104,11 @@ html {
     .cities {
       width: 300%;
       height: 450px;
-      // background-color: red;
 
       display: flex;
       align-items: center;
       flex-wrap: nowrap;
       gap: 0.3rem;
-      // overflow-y: hidden;
 
       .city {
         padding: 2rem 0;
@@ -124,7 +125,7 @@ html {
           border-radius: 10px;
         }
         p {
-          font-size: 1.2rem;
+          font-size: 1rem;
           padding: 0.5rem 0;
         }
       }
@@ -141,35 +142,35 @@ html {
     .stories__container {
       display: flex;
       flex-direction: column;
-      h1 {
-        font-size: 3rem;
-        padding: 2rem 0;
-      }
-      .stories {
+      gap: 2rem;
+      padding: 1rem 0;
+
+      .stories1 {
         width: 100%;
         height: 100%;
         display: flex;
         flex-direction: column;
-        padding-bottom: 1rem;
-        .stories--image {
+        gap: 0.5rem;
+        .stories1--image {
           width: 100%;
-          height: 500px;
-          // background: red;
+          height: 300px;
+          border-radius: 10px;
+          overflow: hidden;
           img {
             width: 100%;
             height: 100%;
+            object-fit: cover;
+            object-position: center;
           }
         }
-        .stories--text {
+        .stories1--text {
           height: 100%;
           width: 100%;
           h2 {
             font-size: 2rem;
-            padding-top: 1.5rem;
           }
           p {
-            font-size: 1.2rem;
-            padding: 0.5rem 0;
+            font-size: 1rem;
           }
         }
       }
@@ -177,29 +178,33 @@ html {
         width: 100%;
         display: flex;
         flex-direction: column;
+        align-items: center;
         gap: 2rem;
-        // padding: 2rem 0;
-        .stories2-box {
+        .stories2__box {
           display: flex;
-
-          width: 100%;
-          gap: 2rem;
-          img {
-            width: 30%;
-            object-fit: cover;
-            object-position: center;
-            // background-color: yellow;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          gap: 1rem;
+          .stories2__image {
+            width: 100%;
+            height: 100%;
+            border-radius: 10px;
+            overflow: hidden;
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
           }
-          .stories2-box--text {
-            width: 70%;
-            // background-color: blue;
+          .stories2--text {
+            
             h3 {
-              font-size: 1.5rem;
+              font-size: 1rem;
             }
             p {
-              padding: 0.6rem 0;
-              padding-right: 4rem;
-              font-size: 1.2rem;
+              padding-top: 0.5rem;
+              font-size: 1rem;
             }
           }
         }
@@ -292,7 +297,10 @@ html {
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
+  html{
+    font-size: 18px;
+  }
   #main {
     nav {
       .hamburger {
@@ -306,9 +314,8 @@ html {
         li {
           list-style: none;
           font-size: 1.2rem;
-          // font-weight: bold;
         }
-        .login{
+        .login {
           background-color: crimson;
           padding: 0.3rem 2rem;
           color: white;
@@ -320,7 +327,6 @@ html {
       padding-bottom: 2rem;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      //  grid-template-rows: repeat(3,100px);
 
       .hero__text {
         h1 {
@@ -328,17 +334,14 @@ html {
           padding-right: 2rem;
         }
         p {
-          font-size: 1.5rem;
+          font-size: 1rem;
           padding: 1rem 1rem 1rem 0;
-          // text-align: left;
           width: 90%;
         }
       }
       .hero__image {
-        // width: 100%;
         grid-column: 2/3;
         grid-row: 1/5;
-        // grid-template-rows: repeat(6,1fr);
         align-self: center;
         justify-self: center;
         grid-template-rows: repeat(8, 1fr);
@@ -350,13 +353,11 @@ html {
         }
 
         img:nth-of-type(2) {
-          // grid-row: span 4;
           grid-row: 1/5;
           aspect-ratio: 16/9;
         }
 
         img:nth-of-type(3) {
-          // grid-row: span 4;
           grid-row: 5/9;
           aspect-ratio: 16/9;
         }
@@ -396,22 +397,21 @@ html {
     }
     .latest__stories {
       .stories__container {
-        width: 100%;
-        height: 100%;
         flex-direction: row;
-        gap: 2rem;
-        .stories {
-          width: 100%;
-          height: 100%;
-          .stories--image {
-            height: 70%;
+        .stories1 {
+          .stories--image1 {
+            height: 100%;
+            img {
+              width: 100%;
+              height: 100%;
+            }
           }
-          .stories--text {
-            height: 30%;
-          }
+         
         }
         .stories2 {
-          height: 100%;
+          .stories2__box {
+            flex-direction: row;
+          }
         }
       }
     }
@@ -443,19 +443,16 @@ html {
     footer {
       width: 100%;
       flex-direction: row;
-      // gap: 6rem;
       justify-content: space-between;
-      align-items: center;    
+      align-items: center;
       .logo {
         width: 80rem;
         font-size: 2rem;
       }
       div {
-        // background-color: red;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        // align-items: center;
         text-align: left;
       }
       .contact {
